sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:6: error: not found: value etape
		for (x<-0 to getNombreValeurs()-2-etape) {
                                                  ^AlgCocktailSort1:13: error: not found: value etape
		for (x<- getNombreValeurs()-2-etape to 0) {
                                              ^AlgCocktailSort1:19: error: not found: value etape
		etape=etape+1
                ^